# vibesearch

./: README.md  pyproject.toml
vibesearch/: __init__.py  vibesearch.py
vibesearch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
