[project]
name = "vibesearch"
version = "0.1.0"
description = "A fun, vibe-based search algorithm."
authors = [
    { name = "Supan Roy", email = "supanbeingroy@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
